<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image.</string>
    <string name="logo">Logo</string>
    <string name="desired_league">DESIRED LEAGUE</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="mens">Men\'s</string>
    <string name="womens">Women\'s</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">NEXT</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_amp_dominate_the_league"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="beginner">Beginner</string>
    <string name="baller">baller</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a Co-Ed Beginner league near you</string>
    <string name="i_am_a">I am a :</string>
</resources>